* storage support is added (custom timer and interval are saved between runs) * project moved from VSC to IDEA * IDEA code formatting

--- a/app.json
+++ b/app.json
@@ -14,8 +14,7 @@
   },
   "permissions": [
     "data:os.device.info",
-    "device:os.local_storage",
-    "data:user.hd.calorie"
+    "device:os.local_storage"
   ],
   "runtime": {
     "apiVersion": {
