Migration to Zepp OS v3: - upgrade to zepp os v3 - general refactoring for easier support of other devices - timer progress page is now based on canvas api

--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
-  "configVersion": "v2",
+  "configVersion": "v3",
   "app": {
     "appId": 1032854,
     "appName": "Timerr",
     "appType": "app",
     "version": {
-      "code": 1,
-      "name": "1.0.1"
+      "code": 2,
+      "name": "2.0.0"
     },
     "icon": "icon.png",
     "vender": "zepp",
@@ -18,21 +18,22 @@
   ],
   "runtime": {
     "apiVersion": {
-      "compatible": "2.0.0",
-      "target": "2.0.0",
-      "minVersion": "2.0.0"
+      "compatible": "3.0.0",
+      "target": "3.0.0",
+      "minVersion": "3.0"
     }
   },
+  "debug": false,
   "targets": {
     "trex": {
       "module": {
         "page": {
           "pages": [
-            "page/select_predefined/select_timer",
-            "page/select_predefined/select_interval",
-            "page/timer_progress/timer_progress",
-            "page/create_timer/create_timer",
-            "page/create_timer/create_interval"
+            "page/devices/trex/selection_pages/select_timer.page",
+            "page/devices/trex/selection_pages/select_interval.page",
+            "page/devices/trex/creation_pages/create_timer.page",
+            "page/devices/trex/creation_pages/create_interval.page",
+            "page/devices/trex/timer_progress/timer_progress.page"
           ]
         }
       },
