--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "appType": "app",
     "version": {
       "code": 2,
-      "name": "2.0.0"
+      "name": "2.1.0"
     },
     "icon": "icon.png",
     "vender": "zepp",
@@ -18,36 +18,34 @@
   ],
   "runtime": {
     "apiVersion": {
-      "compatible": "3.0.0",
-      "target": "3.0.0",
-      "minVersion": "3.0"
+      "compatible": "3.6.0",
+      "target": "3.6.0",
+      "minVersion": "3.6"
     }
   },
   "debug": false,
   "targets": {
-    "trex": {
+    "common": {
       "module": {
         "page": {
           "pages": [
-            "page/devices/trex/selection_pages/select_timer.page",
-            "page/devices/trex/selection_pages/select_interval.page",
-            "page/devices/trex/creation_pages/create_timer.page",
-            "page/devices/trex/creation_pages/create_interval.page",
-            "page/devices/trex/timer_progress/timer_progress.page"
+            "page/selection_pages/select_timer.page",
+            "page/selection_pages/select_interval.page",
+            "page/creation_pages/create_timer.page",
+            "page/creation_pages/create_interval.page",
+            "page/timer_progress/timer_progress.page"
           ]
         }
       },
       "platforms": [
         {
-          "name": "t-rex-ultra",
-          "deviceSource": 6553856
+          "st": "r"
         },
         {
-          "name": "t-rex-ultra-1",
-          "deviceSource": 6553857
+          "st": "s"
         }
       ],
-      "designWidth": 454
+      "designWidth": 480
     }
   },
   "i18n": {
